--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,8 +48,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tf_password"
-        android:onClick="onclick"
+        android:onClick="signIn"
         android:text="login" />
+
+    <Button
+        android:id="@+id/bt_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/bt_login"
+        android:onClick="signUp"
+        android:text="Sign Up" />
 
 
 </RelativeLayout>
