TaskCreatieActiviy toegevoegd aan Ronald's branch

--- a/app/src/main/res/layout/activity_task_create.xml
+++ b/app/src/main/res/layout/activity_task_create.xml
@@ -95,6 +95,6 @@
         android:text="Save"
         android:id="@+id/bt_save"
         android:layout_gravity="center_horizontal"
-        android:onClick="onclickT"/>
+        android:onClick="onClick"/>
 
 </LinearLayout>
