Bezig met groups clickbaar maken

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,6 +50,14 @@
         android:layout_below="@+id/tf_password"
         android:onClick="onclick"
         android:text="login" />
+    <Button
+        android:id="@+id/bt_testGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/bt_login"
+        android:onClick="onclickgroup"
+        android:text="Test group" />
 
 
 </RelativeLayout>
