--- a/app/src/main/res/layout/fragment_group_info.xml
+++ b/app/src/main/res/layout/fragment_group_info.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kb5012.timetable.FragmentGroupScreen.GroupInfo">
+    tools:context=".FragmentGroupScreen.GroupInfo">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
