--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:focusable="false"
-    android:clickable="false">
+>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,8 +12,6 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/groupName"
-            android:focusable="false"
-            android:clickable="false"/>
+            android:id="@+id/groupName" />
     </ScrollView>
 </LinearLayout>
