--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/bt_login"
+        android:layout_below="@+id/bt_signup"
         android:onClick="onclickgroup"
         android:text="Test group" />
 
