--- a/app/src/main/res/layout/fragment_my_group.xml
+++ b/app/src/main/res/layout/fragment_my_group.xml
@@ -1,20 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kb5012.timetable.FragmentUserScreen.MyTask">
 
+
     <ListView
-        android:id="@id/android:list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
-    <ProgressBar
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleSmall"
-        android:indeterminate="true"
-        android:id="@+id/progressBar"
-        android:layout_gravity="center" />
-
-</FrameLayout>
+        android:id="@+id/android:list"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:choiceMode="singleChoice"
+        android:clickable="true"/>
+</RelativeLayout>
