--- a/app/src/main/res/layout/fragment_my_group.xml
+++ b/app/src/main/res/layout/fragment_my_group.xml
@@ -4,13 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.kb5012.timetable.FragmentUserScreen.MyTask">
 
-
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/android:list"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:choiceMode="singleChoice"
-        android:clickable="true"/>
+        android:id="@id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
+
 </RelativeLayout>
