--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/group_name"
+        android:id="@+id/task_name"
         android:text="Test Name"
         android:layout_alignBottom="@+id/imageView"
         android:layout_centerHorizontal="true" />
