--- a/app/src/main/res/layout/activity_splashpage.xml
+++ b/app/src/main/res/layout/activity_splashpage.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="400"
-        android:layout_height="250"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/imageView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/abc_popup_background_mtrl_mult" />
+        android:src="@drawable/timetable" />
 
     <LinearLayout
         android:layout_width="wrap_content"
