--- a/app/src/main/res/layout/fragment_my_group.xml
+++ b/app/src/main/res/layout/fragment_my_group.xml
@@ -2,11 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kb5012.timetable.FragmentUserScreen.MyTask">
+    tools:context="com.kb5012.timetable.FragmentUserScreen.MyGroup">
 
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btn_createGroup">
+    </ListView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/create_group"
+        android:id="@+id/btn_createGroup"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="s"/>
 
 </RelativeLayout>
