--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -55,4 +55,22 @@
         android:id="@+id/textView14"
         android:layout_below="@+id/textView13"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="delete"
+        android:id="@+id/bDelete"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClickDelete"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="complete"
+        android:id="@+id/bComplete"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/textView14"
+        android:onClick="onClickUpdate"/>
 </RelativeLayout>
