--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -6,46 +6,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView9"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:text="@string/task_title"
+        android:id="@+id/task_titel_label"
+        android:layout_below="@+id/image_logo"
+        android:layout_alignStart="@+id/image_logo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/task_description"
+        android:id="@+id/task_description_label"
+        android:layout_below="@+id/task_titel_label"
+        android:layout_alignStart="@+id/image_logo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/task_deadline"
+        android:id="@+id/task_deadline_label"
+        android:layout_below="@+id/task_description_label"
+        android:layout_alignStart="@+id/task_description_label" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Created at"
+        android:id="@+id/task_created_at"
+        android:layout_below="@+id/task_deadline_label"
+        android:layout_alignStart="@+id/task_deadline_label" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/textView10"
-        android:layout_below="@+id/textView9"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView11"
-        android:layout_below="@+id/textView10"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView12"
-        android:layout_below="@+id/textView11"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView13"
-        android:layout_below="@+id/textView12"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/task_create_by"
+        android:layout_below="@+id/task_created_at"
+        android:layout_alignStart="@+id/task_created_at" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,5 +54,14 @@
         android:text="Large Text"
         android:id="@+id/textView14"
         android:layout_below="@+id/textView13"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/textView13" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/image_logo"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/timetable"
+        android:layout_margin="25dp"/>
 </RelativeLayout>
