--- a/app/src/main/res/layout/fragment_my_task.xml
+++ b/app/src/main/res/layout/fragment_my_task.xml
@@ -5,8 +5,8 @@
     tools:context="com.kb5012.timetable.FragmentUserScreen.MyTask">
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/android:list"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
