--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="customBG">#fefefc</color>
     <color name="customButton">#854e38</color>
     <color name="RED">#FF0000</color>
+    <color name="GREEN">#00ff00</color>
 </resources>
