--- a/app/src/main/res/layout/fragment_group_info.xml
+++ b/app/src/main/res/layout/fragment_group_info.xml
@@ -24,8 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add member" />
-
-
+    <Button
+        android:id="@+id/removeGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="delete group" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
