--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_signUp"
         android:text="@string/btn_signup"
-        android:onClick="signUp"
+        android:onClick="onClickMakeUser"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
