--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         android:id="@+id/username_label"
         android:textColor="@color/customAccent"/>
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/tf_username"
         android:hint="@string/username" />
@@ -46,7 +46,7 @@
         android:paddingTop="25dp"
         android:textColor="@color/customAccent"/>
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:id="@+id/tf_password"
@@ -55,14 +55,13 @@
 
     <Button
         android:id="@+id/bt_login"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:onClick="signIn"
         android:text="login"
         android:layout_below="@+id/login_grid"
-        android:layout_alignStart="@+id/login_grid"
-        android:layout_alignEnd="@+id/login_grid"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,13 +74,12 @@
 
     <Button
         android:id="@+id/bt_signup"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:onClick="startSignUp"
         android:text="Sign Up"
         android:layout_below="@+id/tv_login_or"
-        android:layout_alignStart="@+id/bt_login"
-        android:layout_alignEnd="@+id/bt_login"/>
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
