--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,7 +29,7 @@
             android:id="@+id/username_label"
             android:textColor="@color/customAccent"/>
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/username_signup"
             android:hint="@string/username" />
@@ -43,7 +43,7 @@
             android:paddingTop="25dp"
             android:textColor="@color/customAccent"/>
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:id="@+id/password_signup"
@@ -58,7 +58,7 @@
             android:paddingTop="25dp"
             android:textColor="@color/customAccent"/>
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/email_signup"
             android:hint="@string/email"
@@ -73,7 +73,7 @@
             android:paddingTop="25dp"
             android:textColor="@color/customAccent"/>
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/phone_signup"
             android:hint="@string/phone"
