--- a/app/src/main/res/layout/fragment_my_task.xml
+++ b/app/src/main/res/layout/fragment_my_task.xml
@@ -9,9 +9,7 @@
         android:layout_height="fill_parent"
         android:id="@+id/android:list"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-
-
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
