--- a/app/src/main/res/layout/fragment_group_my_task.xml
+++ b/app/src/main/res/layout/fragment_group_my_task.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,11 @@
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
-
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/spinner"/>
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/spinner"/>
+</RelativeLayout>
