--- a/app/src/main/res/layout/fragment_my_task.xml
+++ b/app/src/main/res/layout/fragment_my_task.xml
@@ -8,8 +8,12 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/android:list"
+        android:layout_below="@+id/spinner"/>
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
+        android:id="@+id/spinner"/>
+
 
 </RelativeLayout>
